force-app/main/default/objects/Reserva__c/Reserva__c.object-meta.xml
<CustomObject>
    <description>Este objeto contiene las reservas por volumen. Permite al Platform Cache restar de la cantidad de NMU / Bodega disponibl, la cantidad reservada para disponibilizar la cantidad disponible</description>
    <label>Reserva</label>
    <nameField>
        <displayFormat>RS# {YY}{00000000}</displayFormat>
        <label>Reserva</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>