force-app/main/default/objects/Reserva__c/fields/BusinessSite__c.field-meta.xml
<CustomField>
    <fullName>BusinessSite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup a Business Site (vlocity_cmt__BusinessSite__c) para vincular la Reserva a la Bodega</description>
    <label>Business Site</label>
    <referenceTo>BusinessSite__c</referenceTo>
    <relationshipLabel>Reservas</relationshipLabel>
    <relationshipName>Reservas</relationshipName>
    <type>Lookup</type>
</CustomField>