force-app/main/default/objects/Reserva__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <description>Cantidad de NMU reservados en la Orden</description>
    <label>Cantidad</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>