force-app/main/default/objects/Reserva__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <label>Orden</label>
    <length>30</length>
    <type>Text</type>
</CustomField>