force-app/main/default/objects/Reserva__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup a Products</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reservas</relationshipLabel>
    <relationshipName>Reservas</relationshipName>
    <type>Lookup</type>
</CustomField>