force-app/main/default/objects/Reserva__c/fields/TTL__c.field-meta.xml
<CustomField>
    <fullName>TTL__c</fullName>
    <description>Time To Live (en segundos). Tiempo máximo en que una reserva puede permanecer activa. Transcurrido dicho tiempo, la misma debe cancelarse</description>
    <label>TTL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>